--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Todean_Daiana_Lab7.ListPage"
-             Title="ListPage">
+<ContentPage   xmlns:local="clr-namespace:Todean_Daiana_Lab7"
+                        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                        x:Class="Todean_Daiana_Lab7.ListPage"
+                        Title="ListPage">
     <StackLayout Margin="20">
         <Editor Placeholder="Enter the description of the shopping list"
                 Text="{Binding Description}"
-                HeightRequest="100" />
+                HeightRequest="50" >
+            <Editor.Behaviors>
+                    <local:ValidationBehaviour />
+            </Editor.Behaviors>
+        </Editor>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -18,5 +23,16 @@
                     Text="Delete"
                     Clicked="OnDeleteButtonClicked"/>
         </Grid>
+        <ListView x:Name="listView" Margin="20">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Detail="{Binding Description}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
+            Clicked="OnChooseButtonClicked"/>
+        <Button Text="Delete Item" MaximumWidthRequest="300"
+            Clicked="OnChooseButtonClickedItem"/>
     </StackLayout>
 </ContentPage>
