--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -12,13 +12,16 @@
             ContentTemplate="{DataTemplate local:MainPage}"
             />
         <ShellContent
-            Title="About"
-            ContentTemplate="{DataTemplate local:AboutPage}"
-            />
-        <ShellContent
             Title="My Shopping Lists"
             ContentTemplate="{DataTemplate local:ListEntryPage}"
             />
+        <ShellContent
+            Title="My Shops"
+            ContentTemplate="{DataTemplate local:ShopEntryPage}"
+            />
+        <ShellContent
+            Title="About"
+            ContentTemplate="{DataTemplate local:AboutPage}"
+            />
     </TabBar>
-
 </Shell>
