--- a/ShopPage.xaml
+++ b/ShopPage.xaml
@@ -20,11 +20,15 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Button Text="Save Shop" Grid.Column="0"
                         MaximumWidthRequest="200"
                         Clicked="OnSaveButtonClicked" />
-                <Button Text="Show on Map" Grid.Column="1"
+                <Button Text="Delete Shop" Grid.Column="1"
+                        MaximumWidthRequest="200"
+                        Clicked="OnDeleteButtonClicked" />
+                <Button Text="Show on Map" Grid.Column="2"
                         MaximumWidthRequest="200"
                         Clicked="OnShowMapButtonClicked"></Button>
             </Grid>
